--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<!--
+    Esto es para las bases de angular, por el momento las dejare comentadas
 <app-contador></app-contador>
 <app-heroe></app-heroe>
+-->
 
+<app-main-page></app-main-page>
