--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,43 +3,10 @@
 
 <div class="row">
     <div class="col">
-        <h3>Personajes</h3>
-        <hr>
-        <ul>
-            <li *ngFor="let personaje of personajes" >{{personaje.nombre}} - {{personaje.poder | number}}</li>    
-        </ul>
+        <app-personajes [personajes]="personajes"></app-personajes>
+
     </div>
     <div class="col">
-        <h3> Agregar</h3>
-        <hr>
-        <span style="color: brown;">{{this.nuevo.nombre}}</span>
-        
-        <form (ngSubmit)="agregar( )"> 
-            <input 
-                type="text" 
-                placeholder="Nombre"
-                name="nombre"
-                [(ngModel)]="nuevo.nombre"
-            >
-            <!--
-                Esto con solo [] me indica que es para coger y traer el valor
-                de la variable nuevo.nombre y ponerla ahi, los () hace que tambien sirva de respuesta, para que 
-                cuando se escriba un nuevo valor este se lleve a nuevo.nombre.ngModel
-                Esto cambia en tiempo real
-            -->
-
-
-            <!-- Eso se hacia antes, pero angular nos facilita todo esto al momento d eponer proiedades sobre los forms
-                [value]="nuevo.nombre"
-                (input)="nombreFuncion($event)" 
-            -->
-            <input 
-                type="number" 
-                placeholder="Poder"
-                name="poder"
-                [(ngModel)]="nuevo.poder" 
-            >
-            <button type="submit" > Agregar</button>
-        </form>
+        <app-agregar [personajes]="personajes" [nuevo]="nuevo"></app-agregar>
     </div>
 </div>
